--- a/scss/components/_project.scss
+++ b/scss/components/_project.scss
@@ -94,11 +94,14 @@
     width: 42px;
     height: 42px;
     border: 2px solid $stop-color;
-    opacity: 0;
+    opacity: 1;
     position: absolute;
     bottom: 25px;
     right: 30px;
     color: #fff;
+    display: flex;
+    justify-content: center;
+    align-content: center;
     transition: background 0.3s, opacity 0.3s, transform 0.5s;
     i {
         font-size: 1.5rem;
@@ -108,6 +111,7 @@
         background: transparent;
     }
     @media screen and (min-width: 768px) {
+        opacity: 0;
         position: relative;
         bottom: inherit;
         right: inherit;
