--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,7 @@
 body {
   font-family: "Open Sans", sans-serif;
   font-size: 16px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 p {
@@ -15,19 +14,10 @@ button > * {
 
 main {
   padding: 40px 15px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 @media screen and (min-width: 768px) {
@@ -38,24 +28,12 @@ main {
 
 header {
   background: #4A00E0;
-  background: -webkit-gradient(linear, left bottom, left top, from(#4A00E0), to(#8E2DE2));
-  background: -webkit-linear-gradient(bottom, #4A00E0 0%, #8E2DE2 100%);
-  background: -o-linear-gradient(bottom, #4A00E0 0%, #8E2DE2 100%);
   background: linear-gradient(to top, #4A00E0 0%, #8E2DE2 100%);
   padding: 40px 15px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 @media screen and (min-width: 768px) {
@@ -79,28 +57,16 @@ header h1 {
 
 form {
   width: 75%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 @media screen and (min-width: 768px) {
   form {
     max-width: 650px;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
+    flex-direction: row;
   }
 }
 
@@ -122,6 +88,7 @@ input[type="text"] {
 
 input[type="submit"] {
   border-color: transparent;
+  border-style: solid;
   border-width: 2px;
   width: 120px;
   background: #00C1D9;
@@ -130,8 +97,6 @@ input[type="submit"] {
   padding: 15px;
   text-transform: uppercase;
   font-weight: 700;
-  -webkit-transition: all 0.3s;
-  -o-transition: all 0.3s;
   transition: all 0.3s;
 }
 
@@ -166,23 +131,13 @@ input[type="submit"]:hover {
 }
 
 .projects li {
-  -webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
-          box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
   border-radius: 15px;
   padding: 20px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   position: relative;
   margin-bottom: 30px;
 }
@@ -202,13 +157,8 @@ input[type="submit"]:hover {
 @media screen and (min-width: 768px) {
   .projects li {
     padding: 25px;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: flex-end;
+    flex-direction: row;
+    justify-content: flex-end;
   }
 }
 
@@ -222,14 +172,8 @@ input[type="submit"]:hover {
   .timer {
     margin-bottom: 0;
     margin-right: 15px;
-    -webkit-transition: -webkit-transform 0.5s;
-    transition: -webkit-transform 0.5s;
-    -o-transition: transform 0.5s;
     transition: transform 0.5s;
-    transition: transform 0.5s, -webkit-transform 0.5s;
-    -webkit-transform: translateX(50px);
-        -ms-transform: translateX(50px);
-            transform: translateX(50px);
+    transform: translateX(50px);
   }
 }
 
@@ -255,14 +199,11 @@ input[type="submit"]:hover {
   text-transform: uppercase;
   color: #fff;
   border-color: transparent;
+  border-style: solid;
   border-width: 2px;
   font-weight: 700;
   font-size: 1.125rem;
-  -webkit-transition: background 0.3s, -webkit-transform 0.5s;
-  transition: background 0.3s, -webkit-transform 0.5s;
-  -o-transition: background 0.3s, transform 0.5s;
   transition: background 0.3s, transform 0.5s;
-  transition: background 0.3s, transform 0.5s, -webkit-transform 0.5s;
 }
 
 .btn:hover {
@@ -272,9 +213,7 @@ input[type="submit"]:hover {
 @media screen and (min-width: 768px) {
   .btn {
     margin-right: 15px;
-    -webkit-transform: translateX(50px);
-        -ms-transform: translateX(50px);
-            transform: translateX(50px);
+    transform: translateX(50px);
   }
 }
 
@@ -285,6 +224,7 @@ input[type="submit"]:hover {
 .start:hover {
   color: #21D324;
   border-color: #21D324;
+  border-style: solid;
 }
 
 .stop {
@@ -294,6 +234,7 @@ input[type="submit"]:hover {
 .stop:hover {
   color: #D00202;
   border-color: #D00202;
+  border-style: solid;
 }
 
 .delete-btn {
@@ -307,19 +248,10 @@ input[type="submit"]:hover {
   bottom: 25px;
   right: 30px;
   color: #fff;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -ms-flex-line-pack: center;
-      align-content: center;
-  -webkit-transition: background 0.3s, opacity 0.3s, -webkit-transform 0.5s;
-  transition: background 0.3s, opacity 0.3s, -webkit-transform 0.5s;
-  -o-transition: background 0.3s, opacity 0.3s, transform 0.5s;
+  justify-content: center;
+  align-content: center;
   transition: background 0.3s, opacity 0.3s, transform 0.5s;
-  transition: background 0.3s, opacity 0.3s, transform 0.5s, -webkit-transform 0.5s;
 }
 
 .delete-btn i {
@@ -337,9 +269,7 @@ input[type="submit"]:hover {
     position: relative;
     bottom: inherit;
     right: inherit;
-    -webkit-transform: translateX(50px);
-        -ms-transform: translateX(50px);
-            transform: translateX(50px);
+    transform: translateX(50px);
   }
 }
 
@@ -353,9 +283,7 @@ input[type="submit"]:hover {
   .projects li:hover .delete-btn,
   .projects li:hover .timer,
   .projects li:hover .btn {
-    -webkit-transform: translateX(0);
-        -ms-transform: translateX(0);
-            transform: translateX(0);
+    transform: translateX(0);
   }
 }
 
