--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -24,6 +24,7 @@ input[type="text"] {
 }
 input[type="submit"] {
     border-color: transparent;
+    border-style: solid;
     border-width: 2px;
     width: 120px;
     background: $header-btn-color;
